# skills

./: .gitattributes  .gitignore  .gitleaksignore  AGENTS.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.html  CREDITS.md  LICENSE  README.html  README.md  README.zh-TW.html  README.zh-TW.md  SECURITY.md  SKILLS.md  methodology.html  package.json  pyproject.toml  skills-manifest.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  skill_request.yml
.github/workflows/: ci.yml
docs/: README.html  README.md  agentic-delivery-methodology.html  agentic-delivery-methodology.md  methodology-diagram.html  methodology-diagram.md
scripts/: ci-checks.sh  install-git-hooks.sh  install-to-opencode.sh  install.ps1  install.sh  render-docs.py  sanitize-rules.sed  sync-from-source.sh
scripts/git-hooks/: pre-commit  pre-push
skills/: NPO-marketing-guide.md  aws-bedrock-model-ids.md
skills/agentic-scrum-governance/: SKILL.md
skills/backend-patterns/: SKILL.md
skills/brand-guidelines-naelt/: README.md  SKILL.md  SUMMARY.md
skills/capability-mapper/: SKILL.md
skills/code-refactoring-advisor/: NOTICE
skills/code-review/: CODE_REVIEW_LINEAGE.md  GENERATION_GUIDE.md  MANUAL_GENERATION_GUIDE.md  README.html  README.md  SKILL.md  index.html  manual.html
skills/code-summarizer/: SKILL.md
skills/committee-decision-making/: README.md  SKILL.md
skills/container-image-janitor/: SKILL.md
skills/continuous-learning-v2/: SKILL.md
skills/cross-agent-review/: SKILL.md
skills/cross-agents-symlink-bridge/: SKILL.md
(+671 files in other folders)
